tests/macros/confirm/page_size.rs
fn main() {
    inquisition::questions![confirm { page_size: todo!() }];
}
